--- a/src/pug/ru/components/documentation.pug
+++ b/src/pug/ru/components/documentation.pug
@@ -8,14 +8,14 @@ section.documentation
         .documentation-item__icon
           +svg("document")
         figcaption Договор аренды
-        a.documentation-item__btn.btn(href="../document/pdf/dogovir-orendy-zemelnyh-dilyanok.pdf" target="_blank") Посмотреть
+        a.documentation-item__btn.btn(href="pdf/dogovir-orendy-zemelnyh-dilyanok.pdf" target="_blank") Посмотреть
       figure.documentation__item.documentation-item
         .documentation-item__icon
           +svg("document")
         figcaption Разрешение на выполнение<br>cтроительных работ
-        a.documentation-item__btn.btn(href="../document/pdf/dozvil-na-vykonannya-budivelnyh-robit.pdf" target="_blank") Посмотреть
+        a.documentation-item__btn.btn(href="pdf/dozvil-na-vykonannya-budivelnyh-robit.pdf" target="_blank") Посмотреть
       figure.documentation__item.documentation-item
         .documentation-item__icon
           +svg("document")
         figcaption Технические условия
-        a.documentation-item__btn.btn(href="../document/pdf/tehnichni-umovy.pdf" target="_blank") Посмотреть
+        a.documentation-item__btn.btn(href="pdf/tehnichni-umovy.pdf" target="_blank") Посмотреть
