--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -167,3 +167,53 @@ figure
 //   .header.menu-ctive
 //     .header__menu
 //       height: 50vh
+
+
+.text-news
+  font-size: 24px
+  line-height: 1.5em
+  color: #ffffff
+  font-weight: 400
+  font: 400 $fTextFirst Roboto, Arial, sans-serif
+
+figure.news 
+  max-width: 540px
+  padding: 30px
+  object-fit: cover
+  background-color: #faf7f3
+  border: 1px solid #333333
+  margin: 0 auto
+  margin-bottom: 30px
+  img
+    width: 100%
+    margin-bottom: 30px
+  h3
+    font-size: 24px
+    line-height: 1.5em
+    text-transform: uppercase
+    color: #333333
+    font-weight: 500
+    font-family: "Roboto Slab"
+    margin-bottom: 25px
+  ul
+    margin-bottom: 25px
+  .news-btn
+    display: flex
+    justify-content: center
+    a
+      padding: 15px 56px
+
+.news-slide-arrs
+  display: flex
+  column-gap: 30px
+  justify-content: center
+  margin-bottom: 100px
+
+.news-arrow-svg
+  svg
+    width: 30px
+    fill: #fff
+.to-left-news-arr
+  svg
+    transform: rotate(-180deg)
+
