--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -199,6 +199,8 @@ figure.news
     margin-bottom: 25px
   ul
     margin-bottom: 25px
+    li
+      margin-bottom: 10px
   .news-btn
     display: flex
     justify-content: center
