--- a/src/pug/news.pug
+++ b/src/pug/news.pug
@@ -16,7 +16,8 @@ html(lang="uk")
       include components/header
       main.main
         include components/hero-news
-        include components/news-list
+        .container
+          include components/news-list
 
       include components/footer
     script(src="js/scripts.js" defer)
