--- a/src/pug/components/news-list.pug
+++ b/src/pug/components/news-list.pug
@@ -1,7 +1,7 @@
 figure.news 
     img(src="img/news-picture-1.jpg", alt="")
     figcaption 
-        h3 Старт продажу нових черг у grand palace розпочато!
+        h3 Старт продажу нових черг у grand palace розпочато!1
         ul
             li Ми відкрили продажі на квартири другої черги
             li Загальна кількість квартир - 354
@@ -11,7 +11,7 @@ figure.news
 figure.news 
     img(src="img/news-picture-1.jpg", alt="")
     figcaption 
-        h3 Старт продажу нових черг у grand palace розпочато!
+        h3 Старт продажу нових черг у grand palace розпочато!2
         ul
             li Ми відкрили продажі на квартири другої черги
             li Загальна кількість квартир - 354
@@ -21,7 +21,87 @@ figure.news
 figure.news 
     img(src="img/news-picture-1.jpg", alt="")
     figcaption 
-        h3 Старт продажу нових черг у grand palace розпочато!
+        h3 Старт продажу нових черг у grand palace розпочато!3
+        ul
+            li Ми відкрили продажі на квартири другої черги
+            li Загальна кількість квартир - 354
+            li Терміни здачі - II квартал 2025 та II квартал 2026 року
+        .news-btn
+            a(href="#").documentation-item__btn.btn Детальніше 
+figure.news 
+    img(src="img/news-picture-1.jpg", alt="")
+    figcaption 
+        h3 Старт продажу нових черг у grand palace розпочато!4
+        ul
+            li Ми відкрили продажі на квартири другої черги
+            li Загальна кількість квартир - 354
+            li Терміни здачі - II квартал 2025 та II квартал 2026 року
+        .news-btn
+            a(href="#").documentation-item__btn.btn Детальніше 
+figure.news 
+    img(src="img/news-picture-1.jpg", alt="")
+    figcaption 
+        h3 Старт продажу нових черг у grand palace розпочато!5
+        ul
+            li Ми відкрили продажі на квартири другої черги
+            li Загальна кількість квартир - 354
+            li Терміни здачі - II квартал 2025 та II квартал 2026 року
+        .news-btn
+            a(href="#").documentation-item__btn.btn Детальніше 
+figure.news 
+    img(src="img/news-picture-1.jpg", alt="")
+    figcaption 
+        h3 Старт продажу нових черг у grand palace розпочато!6
+        ul
+            li Ми відкрили продажі на квартири другої черги
+            li Загальна кількість квартир - 354
+            li Терміни здачі - II квартал 2025 та II квартал 2026 року
+        .news-btn
+            a(href="#").documentation-item__btn.btn Детальніше 
+figure.news 
+    img(src="img/news-picture-1.jpg", alt="")
+    figcaption 
+        h3 Старт продажу нових черг у grand palace розпочато!7
+        ul
+            li Ми відкрили продажі на квартири другої черги
+            li Загальна кількість квартир - 354
+            li Терміни здачі - II квартал 2025 та II квартал 2026 року
+        .news-btn
+            a(href="#").documentation-item__btn.btn Детальніше 
+figure.news 
+    img(src="img/news-picture-1.jpg", alt="")
+    figcaption 
+        h3 Старт продажу нових черг у grand palace розпочато!8
+        ul
+            li Ми відкрили продажі на квартири другої черги
+            li Загальна кількість квартир - 354
+            li Терміни здачі - II квартал 2025 та II квартал 2026 року
+        .news-btn
+            a(href="#").documentation-item__btn.btn Детальніше 
+figure.news 
+    img(src="img/news-picture-1.jpg", alt="")
+    figcaption 
+        h3 Старт продажу нових черг у grand palace розпочато!9
+        ul
+            li Ми відкрили продажі на квартири другої черги
+            li Загальна кількість квартир - 354
+            li Терміни здачі - II квартал 2025 та II квартал 2026 року
+        .news-btn
+            a(href="#").documentation-item__btn.btn Детальніше 
+figure.news 
+    img(src="img/news-picture-1.jpg", alt="")
+    figcaption 
+        h3 Старт продажу нових черг у grand palace розпочато!10
+        ul
+            li Ми відкрили продажі на квартири другої черги
+            li Загальна кількість квартир - 354
+            li Терміни здачі - II квартал 2025 та II квартал 2026 року
+        .news-btn
+            a(href="#").documentation-item__btn.btn Детальніше 
+figure.news 
+    img(src="img/news-picture-1.jpg", alt="")
+    figcaption 
+        h3 Старт продажу нових черг у grand palace розпочато!11
         ul
             li Ми відкрили продажі на квартири другої черги
             li Загальна кількість квартир - 354
@@ -31,11 +111,11 @@ figure.news
 
 
 .news-slide-arrs
-    a.documentation-item__btn.btn.news-arrow-svg.to-left-news-arr(href="#")
+    a.documentation-item__btn.btn.news-arrow-svg.to-left-news-arr#newsToLeft(href="#")
         span
             svg#arrow(viewBox="0 0 57 26")
                 path(d="M56.6,14L45,25.6c-0.5,0.5-1.4,0.5-1.9,0c-0.3-0.3-0.4-0.6-0.4-1c0-0.3,0.1-0.7,0.4-1l8.9-8.9H0V11h51.8 l-8.7-8.7c-0.5-0.5-0.5-1.4,0-1.9c0.3-0.3,0.6-0.4,1-0.4c0.4,0,0.7,0.1,1,0.4L56.7,12l0,0C57.1,12.6,57.1,13.5,56.6,14z")
-    a.documentation-item__btn.btn.news-arrow-svg(href="#")
+    a.documentation-item__btn.btn.news-arrow-svg#newsToRight(href="#")
         span
             svg#arrow(viewBox="0 0 57 26")
                 path(d="M56.6,14L45,25.6c-0.5,0.5-1.4,0.5-1.9,0c-0.3-0.3-0.4-0.6-0.4-1c0-0.3,0.1-0.7,0.4-1l8.9-8.9H0V11h51.8 l-8.7-8.7c-0.5-0.5-0.5-1.4,0-1.9c0.3-0.3,0.6-0.4,1-0.4c0.4,0,0.7,0.1,1,0.4L56.7,12l0,0C57.1,12.6,57.1,13.5,56.6,14z")
