--- a/src/pug/components/commercial-overview.pug
+++ b/src/pug/components/commercial-overview.pug
@@ -11,3 +11,36 @@ section.real-estate.commercial-overview
           p.short-description__text Хочете купити офіс або торгове приміщення під бізнес в новобудові? В такому випадку точно варто звернути увагу на Grand Palace.
           p.short-description__text Портфель комерційної нерухомості компанії складається з різноманітних нежитлових приміщень різного функціонального призначення на цокольних поверхах новобудов, а також торгових та офісних площ в торгово-розважальних і бізнес-центрах у складі житлового комплексу.
           p.short-description__text Незважаючи на те, чи то стріт-рітейл, кафе, ресторани, фітнес-центр, чи будь-який бізнес сфери послуг і сервісів, ми допоможемо підібрати ідеальне приміщення під бізнес з урахуванням ваших цілей і завдань.
+section.comercial-galery.container
+  .galery-block
+    .picture-galery 
+      picture 
+        sourse(srcset="img/galery1.jpg" type="image/jpg")
+        img(src="img/galery1.webp", alt="")
+    .text-block-galery
+      .number 01
+      p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
+  .galery-block
+    .picture-galery 
+        picture 
+          sourse(srcset="img/galery2.jpg" type="image/jpg")
+          img(src="img/galery2.webp", alt="")
+    .text-block-galery
+      .number 02
+      p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
+  .galery-block
+    .picture-galery 
+        picture 
+          sourse(srcset="img/galery3.jpg" type="image/jpg")
+          img(src="img/galery3.webp", alt="")
+    .text-block-galery
+      .number 03
+      p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
+  .galery-block
+    .picture-galery 
+        picture 
+          sourse(srcset="img/galery4.jpg" type="image/jpg")
+          img(src="img/galery4.webp", alt="")
+    .text-block-galery
+      .number 04
+      p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
