--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -54,7 +54,6 @@ main
 figure
   margin: 0
 
-
 .body-wrapper
   min-height: 100%
   display: flex
@@ -79,7 +78,6 @@ figure
   &-20
     flex: 1 1 20%
     max-width: 20%
-
 
 .title-wrap
   text-align: center
@@ -160,6 +158,7 @@ figure
 @import components/panorama
 @import components/construction-progress
 @import components/documentation
+@import components/comment-main
 @import components/contact-section
 @import components/footer
 
