--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -21,6 +21,7 @@ html(lang="uk")
         include components/overview
         include components/panorama
         include components/construction-progress
+        include components/comment-main
         include components/documentation
       include components/footer
     script(src="js/scripts.js" defer)
