--- a/src/pug/components/hero.pug
+++ b/src/pug/components/hero.pug
@@ -6,3 +6,12 @@ section.hero
         h1.hero__title
           span.text Сучасний комфортний житловий комплекс з широким спектром зручностей гармонійно поєднаний з ТРЦ.
           span.text Використання даху для прогулянкових зон відпочинку.
+        a.open-popap.short-description__btn.btn(href="#") Отримати більше інформації
+  .slider-images 
+      img(src="img/hero1.webp", alt="", loading="lazy")
+      img(src="img/hero.jpg", alt="")
+      img(src="img/hero2.webp", alt="", loading="lazy")
+      img(src="img/hero3.webp", alt="", loading="lazy")
+      img(src="img/hero4.webp", alt="", loading="lazy")
+      img(src="img/hero5.webp", alt="", loading="lazy")
+      img(src="img/hero6.webp", alt="", loading="lazy")
