--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -35,3 +35,5 @@ header.header
           a.menu__link(href= location + "#documentation") Документація
         li
           a.menu__link(href='contacts.html') Контакти
+        li
+          a.menu__link(href='news.html') Новини
