--- a/src/pug/components/hero-news.pug
+++ b/src/pug/components/hero-news.pug
@@ -1,9 +1,21 @@
-section.hero
+//- section.hero
+//-   .container
+//-     .row
+//-       .left-side.col
+//-         p.tagline новини
+//-         h1.hero__title
+//-           span.text-news Слідкуйте за оновленнями, щоб бути в курсі усіх актуальних подій 
+//-           span.text-news та новин від нашої компанії!
+          
+section.hero.hero-news
   .container
     .row
       .left-side.col
         p.tagline новини
         h1.hero__title
-          span.text-news Слідкуйте за оновленнями, щоб бути в курсі усіх актуальних подій 
-          span.text-news та новин від нашої компанії!
-          
+          p   
+            span.text-news Слідкуйте за оновленнями, щоб бути в курсі усіх актуальних подій 
+          p 
+            span.text-news та новин від нашої компанії!
+
+  img(src="img/hero3.webp", alt="")
