--- a/src/pug/components/news-list.pug
+++ b/src/pug/components/news-list.pug
@@ -7,7 +7,7 @@ figure.news
             li Загальна кількість квартир - 354
             li Терміни здачі - II квартал 2025 та II квартал 2026 року
         .news-btn
-            a(href="#").documentation-item__btn.btn Детальніше 
+            a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
     img(src="img/news-picture-1.jpg", alt="")
     figcaption 
@@ -17,7 +17,7 @@ figure.news
             li Загальна кількість квартир - 354
             li Терміни здачі - II квартал 2025 та II квартал 2026 року
         .news-btn
-            a(href="#").documentation-item__btn.btn Детальніше 
+            a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
     img(src="img/news-picture-1.jpg", alt="")
     figcaption 
@@ -27,7 +27,7 @@ figure.news
             li Загальна кількість квартир - 354
             li Терміни здачі - II квартал 2025 та II квартал 2026 року
         .news-btn
-            a(href="#").documentation-item__btn.btn Детальніше 
+            a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
     img(src="img/news-picture-1.jpg", alt="")
     figcaption 
@@ -37,7 +37,7 @@ figure.news
             li Загальна кількість квартир - 354
             li Терміни здачі - II квартал 2025 та II квартал 2026 року
         .news-btn
-            a(href="#").documentation-item__btn.btn Детальніше 
+            a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
     img(src="img/news-picture-1.jpg", alt="")
     figcaption 
@@ -47,7 +47,7 @@ figure.news
             li Загальна кількість квартир - 354
             li Терміни здачі - II квартал 2025 та II квартал 2026 року
         .news-btn
-            a(href="#").documentation-item__btn.btn Детальніше 
+            a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
     img(src="img/news-picture-1.jpg", alt="")
     figcaption 
@@ -57,7 +57,7 @@ figure.news
             li Загальна кількість квартир - 354
             li Терміни здачі - II квартал 2025 та II квартал 2026 року
         .news-btn
-            a(href="#").documentation-item__btn.btn Детальніше 
+            a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
     img(src="img/news-picture-1.jpg", alt="")
     figcaption 
@@ -67,7 +67,7 @@ figure.news
             li Загальна кількість квартир - 354
             li Терміни здачі - II квартал 2025 та II квартал 2026 року
         .news-btn
-            a(href="#").documentation-item__btn.btn Детальніше 
+            a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
     img(src="img/news-picture-1.jpg", alt="")
     figcaption 
@@ -77,7 +77,7 @@ figure.news
             li Загальна кількість квартир - 354
             li Терміни здачі - II квартал 2025 та II квартал 2026 року
         .news-btn
-            a(href="#").documentation-item__btn.btn Детальніше 
+            a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
     img(src="img/news-picture-1.jpg", alt="")
     figcaption 
@@ -87,7 +87,7 @@ figure.news
             li Загальна кількість квартир - 354
             li Терміни здачі - II квартал 2025 та II квартал 2026 року
         .news-btn
-            a(href="#").documentation-item__btn.btn Детальніше 
+            a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
     img(src="img/news-picture-1.jpg", alt="")
     figcaption 
@@ -97,7 +97,7 @@ figure.news
             li Загальна кількість квартир - 354
             li Терміни здачі - II квартал 2025 та II квартал 2026 року
         .news-btn
-            a(href="#").documentation-item__btn.btn Детальніше 
+            a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
     img(src="img/news-picture-1.jpg", alt="")
     figcaption 
@@ -107,7 +107,7 @@ figure.news
             li Загальна кількість квартир - 354
             li Терміни здачі - II квартал 2025 та II квартал 2026 року
         .news-btn
-            a(href="#").documentation-item__btn.btn Детальніше 
+            a(href="one-news.html").documentation-item__btn.btn Детальніше 
 
 
 .news-slide-arrs
