--- a/src/pug/news.pug
+++ b/src/pug/news.pug
@@ -20,4 +20,4 @@ html(lang="uk")
           include components/news-list
 
       include components/footer
-    script(src="js/scripts.js" defer)
+    script(src="js/scripts.js")
