--- a/src/pug/one-news.pug
+++ b/src/pug/one-news.pug
@@ -48,6 +48,6 @@ html(lang="uk")
                             a(href="tel:+380980555500")  (098) 055 55 00
                 a.short-description__btn.btn(href="#") усі новини
 
+    script(src="js/scripts.js")
+    include components/footer
 
-      include components/footer
-    script(src="js/scripts.js" defer)
