--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -325,3 +325,32 @@ figure.news
   +media(1260)
     width: 49%
     min-width: 555px
+
+.news-text
+  font-size: 24px
+  line-height: 36px
+  color: #ffffff
+  font-weight: 400
+  font-family: "Roboto"
+  opacity: 1
+
+
+.hero-news
+  position: relative
+  img
+    position: absolute
+    width: 100%
+    height: 100%
+    top: 0
+    left: 0
+  .container
+    position: relative
+    top: 50%
+    transform: translateY(-50%)
+    z-index: 1
+
+.hero.hero-news:before
+  height: 50%
+  top: 50%
+  transform: translateY(-50%)
+  z-index: 1
