--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,11 +4,14 @@ html(lang="uk")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    title Grand Palace - сучасне житло у місті Хмельницький
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     link(rel="stylesheet" href="css/styles.css")
+    title Grand Palace - сучасне житло у місті Хмельницький
+    link(rel='preconnect' href='https://fonts.googleapis.com')
+    link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
+    link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
+    link(rel='icon' href='img/favicon.ico')
+
+
   body(tabindex="0")
     .body-wrapper
       include components/vars
