--- a/src/sass/components/comment-main.sass
+++ b/src/sass/components/comment-main.sass
@@ -1,8 +1,14 @@
-.comment-block
-    max-height: 600px
-    padding: 60px 0 50px
-    font-family: "Roboto"
+.parent-block-carousel
+    position: relative
+    width: 100%
     overflow: hidden
+
+.comment-block
+    padding: 300px 0 50px
+    font-family: "Roboto"
+
+.carousel
+    position: relative
 
 .comment-block,
 .img-block_comment,
@@ -21,8 +27,13 @@
     column-gap: 18px
     padding-bottom: 15px
 
+.carousel-item
+    position: absolute
+    top: 0
+
 .comment
-    min-width: 42.7vw
+    width: 100%
+    max-width: 43vw
     padding: 25px
     background-color: #faf7f3
     border: 1px solid #333
