--- a/src/pug/components/comment-main.pug
+++ b/src/pug/components/comment-main.pug
@@ -27,8 +27,9 @@ section.comment-section
                     .date-block_comment
                         p.date-comment 12.02.2020
                 .text-comment
-                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisi commodo viverra maecenas accumsan lacus vel facilisis lacussultrices maecenas accumsan lacus vel facilisi commodo viverra . Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risu commodo viverra lacus vel facilisi commodo facilisi commodo viverra  maecenas accumsan lacus vel facilisis lacus vel facilisisultrices
+                    p.text-comment-block Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisi commodo viverra maecenas accumsan lacus vel facilisis lacussultrices maecenas accumsan lacus vel facilisi commodo viverra . Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risu commodo viverra lacus vel facilisi commodo facilisi commodo viverra  maecenas accumsan lacus vel facilisis lacus vel facilisisultrices
                     a.btn-more(href="#")  ...більше 
+                    a.btn-more-cancel(href="#")  ...сховати
             .comment.carousel-item
                 .header-comment
                     .img-block_comment
@@ -51,8 +52,9 @@ section.comment-section
                     .date-block_comment
                         p.date-comment 12.02.2020
                 .text-comment
-                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisi commodo viverra maecenas accumsan lacus vel facilisis lacussultrices maecenas accumsan lacus vel facilisi commodo viverra . Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risu commodo viverra lacus vel facilisi commodo facilisi commodo viverra  maecenas accumsan lacus vel facilisis lacus vel facilisisultrices
+                    p.text-comment-block Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisi commodo viverra maecenas accumsan lacus vel facilisis lacussultrices maecenas accumsan lacus vel facilisi commodo viverra . Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risu commodo viverra lacus vel facilisi commodo facilisi commodo viverra  maecenas accumsan lacus vel facilisis lacus vel facilisisultrices
                     a.btn-more(href="#")  ...більше 
+                    a.btn-more-cancel(href="#")  ...сховати
             .comment.carousel-item
                 .header-comment
                     .img-block_comment
@@ -75,8 +77,9 @@ section.comment-section
                     .date-block_comment
                         p.date-comment 12.02.2024
                 .text-comment
-                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisi commodo viverra maecenas accumsan lacus vel facilisis lacussultrices maecenas accumsan lacus vel facilisi commodo viverra . Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risu commodo viverra lacus vel facilisi commodo facilisi commodo viverra  maecenas accumsan lacus vel facilisis lacus vel facilisisultrices
+                    p.text-comment-block Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisi commodo viverra maecenas accumsan lacus vel facilisis lacussultrices maecenas accumsan lacus vel facilisi commodo viverra . Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risu commodo viverra lacus vel facilisi commodo facilisi commodo viverra  maecenas accumsan lacus vel facilisis lacus vel facilisisultrices
                     a.btn-more(href="#")  ...більше 
+                    a.btn-more-cancel(href="#")  ...сховати
             .comment.carousel-item
                 .header-comment
                     .img-block_comment
@@ -99,8 +102,9 @@ section.comment-section
                     .date-block_comment
                         p.date-comment 12.02.2024
                 .text-comment
-                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisi commodo viverra maecenas accumsan lacus vel facilisis lacussultrices maecenas accumsan lacus vel facilisi commodo viverra . Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risu commodo viverra lacus vel facilisi commodo facilisi commodo viverra  maecenas accumsan lacus vel facilisis lacus vel facilisisultrices
+                    p.text-comment-block Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisi commodo viverra maecenas accumsan lacus vel facilisis lacussultrices maecenas accumsan lacus vel facilisi commodo viverra . Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risu commodo viverra lacus vel facilisi commodo facilisi commodo viverra  maecenas accumsan lacus vel facilisis lacus vel facilisisultrices
                     a.btn-more(href="#")  ...більше 
+                    a.btn-more-cancel(href="#")  ...сховати
     .button-block 
         a.left.btn.btn-comment(href="#")
             svg(viewBox="0 0 57 26")
