--- a/src/pug/components/hero.pug
+++ b/src/pug/components/hero.pug
@@ -1,3 +1,32 @@
+.popap-block
+  .opacity-bg
+  .popap-more-info 
+    h2.documentation__title.title.title--one-word
+      span.head-line дізнатися ціну
+    form() 
+      .popap-input_block.flex-popap
+        span.cancel-popap
+          <svg version="1.2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16">
+            <path class="a" d="m14.7 0.8l1 1-13.9 13.9-1-1z"/>
+            <path class="a" d="m0.8 1.8l1-1 13.9 13.9-1 1z"/>
+          </svg>
+        p.flex-popap.label-flex
+          label(for="name") Імʼя*
+          input(type="text" id="name" name="name") 
+        p.flex-popap.label-flex
+          label(for="tel") Номер телефону*
+          input(type="tel" id="tel" name="tel") 
+      .question.flex-popap.label-flex
+        label Запитання
+        textarea#question(name="question", cols="30", rows="10") 
+      .radio-btn
+        p
+          input(type="radio" id="liveHouse" name="liveHouse")
+          label(for="liveHouse") Житлова нерухомість
+        p
+          input(type="radio" id="comercial" name="comercial")
+          label(for="comercial") Комерційна нерухомість
+      button(type="submit") відправити 
 section.hero
   .container
     .row
