--- a/src/sass/components/comment-main.sass
+++ b/src/sass/components/comment-main.sass
@@ -33,7 +33,7 @@
 
 .comment
     width: 100%
-    max-width: 43vw
+    max-width: 42.8vw
     padding: 25px
     background-color: #faf7f3
     border: 1px solid #333
@@ -66,7 +66,8 @@
     color: #333333
     font-weight: 400
 
-.btn-more
+.btn-more,
+.btn-more-cancel
     color: #9c1a1a
 
 .button-block
@@ -76,6 +77,7 @@
     width: 60px
     height: 40px
     background-color: #9c1a1a
+
 .star-comment
     display: flex
     flex-direction: row
@@ -84,3 +86,15 @@
 .fill-star
     path
         fill: #eac83e
+
+.text-comment-block
+    max-height: 100px
+    overflow: hidden
+    transition: max-height 1s ease
+
+.visible 
+    max-height: 1000px
+    transition: max-height 1s ease
+
+.btn-more-cancel
+    display: none
