--- a/src/sass/components/hero.sass
+++ b/src/sass/components/hero.sass
@@ -1,3 +1,73 @@
+.popap-block
+  position: relative
+  font-size: 18px
+  color: #3c3839
+  font-weight: 400
+  font-family: "Roboto"
+  input,
+  textarea
+    width: 100%
+    height: 100%
+    box-sizing: border-box
+    padding: 11px
+    outline: none
+    border: 1px solid #333333
+  textarea
+    min-height: 121
+    resize: none
+  button
+    position: relative
+    top: 0
+    left: 50%
+    padding: 15px 50px
+    color: #ffffff
+    text-align: center
+    text-transform: uppercase
+    background-color: #9c1a1a
+    transform: translateX(-50%)
+    border: none
+
+.flex-popap
+  display: flex
+  justify-content: space-between
+  column-gap: 20px
+  // row-gap: 20px
+
+.label-flex
+  flex-direction: column
+
+.opacity-bg
+  display: none
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100vh
+  background-color: #000
+  opacity: 0.6
+  z-index: 11
+
+.popap-more-info
+  position: fixed
+  top: 50%
+  left: 50%
+  padding: 50px 40px
+  transform: translate(-50%, -50%)
+  background-color: #f3ece2
+  z-index: 12
+  display: none
+
+.cancel-popap
+  position: absolute
+  top: 20px
+  right: 20px
+  cursor: pointer
+  path, svg
+    fill: #9c1a1a
+
+.radio-btn
+  margin-bottom: 26px
+
 .hero
   position: relative
   margin-bottom: 50px
@@ -17,7 +87,7 @@
     +media(1024)
       width: 50%
       backdrop-filter: blur(0.5px)
-  
+
   .slider-images
     position: absolute
     top: 0
