--- a/src/pug/components/hero.pug
+++ b/src/pug/components/hero.pug
@@ -1,8 +1,9 @@
 .popap-block
   .opacity-bg
   .popap-more-info 
-    h2.documentation__title.title.title--one-word
-      span.head-line дізнатися ціну
+    .popap-header-line
+      h2.documentation__title.title.title--one-word
+        span.head-line дізнатися ціну
     form() 
       .popap-input_block.flex-popap
         span.cancel-popap
@@ -10,10 +11,10 @@
             <path class="a" d="m14.7 0.8l1 1-13.9 13.9-1-1z"/>
             <path class="a" d="m0.8 1.8l1-1 13.9 13.9-1 1z"/>
           </svg>
-        p.flex-popap.label-flex
+        p.flex-popap.label-flex.input-popap
           label(for="name") Імʼя*
           input(type="text" id="name" name="name") 
-        p.flex-popap.label-flex
+        p.flex-popap.label-flex.input-popap
           label(for="tel") Номер телефону*
           input(type="tel" id="tel" name="tel") 
       .question.flex-popap.label-flex
@@ -21,10 +22,10 @@
         textarea#question(name="question", cols="30", rows="10") 
       .radio-btn
         p
-          input(type="radio" id="liveHouse" name="liveHouse")
+          input(type="radio" id="liveHouse" name="popapRadio")
           label(for="liveHouse") Житлова нерухомість
         p
-          input(type="radio" id="comercial" name="comercial")
+          input(type="radio" id="comercial" name="popapRadio")
           label(for="comercial") Комерційна нерухомість
       button(type="submit") відправити 
 section.hero
