--- a/src/sass/components/comment-main.sass
+++ b/src/sass/components/comment-main.sass
@@ -1,11 +1,16 @@
 .parent-block-carousel
+    padding: 30px 0
     position: relative
     width: 100%
     overflow: hidden
+    +media(425)
+        padding: 30px 0 0
 
 .comment-block
     padding: 300px 0 50px
     font-family: "Roboto"
+    +media(768)
+        padding: 250px 0 50px
 
 .carousel
     position: relative
@@ -17,15 +22,19 @@
     display: flex
     justify-content: space-between
     column-gap: 60px
-    row-gap: 60px
+    row-gap: 20px
     flex-wrap: wrap
     +media(1024)
         flex-wrap: nowrap
+        column-gap: 30px
+        row-gap: 60px
 
 .img-block_comment
-    justify-content: flex-start
-    column-gap: 18px
-    padding-bottom: 15px
+    justify-content: center
+    row-gap: 10px
+    +media(425)
+        justify-content: flex-start
+        padding-bottom: 15px
 
 .carousel-item
     position: absolute
@@ -33,10 +42,13 @@
 
 .comment
     width: 100%
-    max-width: 42.8vw
     padding: 25px
     background-color: #faf7f3
     border: 1px solid #333
+    +media(1024)
+        max-width: 42vw
+    +media(1440)
+        max-width: 42.8vw
 
 .img-circle
     width: 76px
@@ -82,6 +94,9 @@
     display: flex
     flex-direction: row
     column-gap: 5px
+    justify-content: center
+    +media(768)
+        justify-content: flex-start
 
 .fill-star
     path
