--- a/src/pug/ru/components/footer.pug
+++ b/src/pug/ru/components/footer.pug
@@ -1,8 +1,8 @@
-footer.footer
+footer.footer(itemprop='publisher', itemscope, itemtype='http://schema.org/WPFooter')
   .container
     .footer-info.info-items
-      .footer-media.info-item
-        p.footer__email
+      .footer-media.info-item(itemprop='publisher', itemscope, itemtype='http://schema.org/Organization')
+        p.footer__email(itemprop='email')
           a.email-link(href='mailto:office@grandpalace.km.ua')
             +svg('email', 31, 23)
             |office@grandpalace.km.ua
@@ -11,16 +11,16 @@ footer.footer
             +svg('fb', 31, 31)
           a.social-link(href='https://www.instagram.com/grand_palace_km/')
             object(class='icon' type='image/svg+xml' data='../img/instagram.svg' width='31' height='31')
-      .footer-address.info-item
+      .footer-address.info-item( itemscope itemtype='http://schema.org/PostalAddress')
         .footer-address__wrap
           +svg('pin-footer', 30, 40)
           p Отделение продаж
           p г. Хмельницкий, ул. Подольская, 115
-      .footer__phone.phone-list.info-item
-        a.phone-link(href='tel:+380670098700')
+      .footer__phone.phone-list.info-item(itemscope itemtype='http://schema.org/ContactPoint')
+        a.phone-link(href='tel:+380670098700' itemprop='telephone')
           +svg('phone', 19, 29)
           |(067)&nbsp;00-98-700
-        a.phone-link(href='tel:+380670098700')
+        a.phone-link(href='tel:+380670098700' itemprop='telephone')
           +svg('phone', 19, 29)
           |(067)&nbsp;00-98-700
     .copyright
