--- a/src/sass/components/contact-section.sass
+++ b/src/sass/components/contact-section.sass
@@ -40,6 +40,8 @@
     text-align: left
   +media(1024)
     flex-basis: auto
+  h2,
+  h3,
   h4
     margin-bottom: 13px
     font: 500 1.8rem 'Roboto Slab', Arial, serif
