--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -1,15 +1,34 @@
 doctype html
 html(lang="uk")
   head
+    //- Мета-конфігурації
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet" href="css/styles.css")
-    title Grand Palace - контакты
+    meta(property="og:url" content="#")
+    link(rel='canonical' href='#') 
+  
+    //- 
+    meta(name="author" content="Grand Palace")
+    meta(name="publisher" content="Grand Palace")  
+    //- Шрифти
     link(rel='preconnect' href='https://fonts.googleapis.com')
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
     link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
+    //- Favicon
     link(rel='icon' href='img/favicon.ico')
+    //- Мета опис
+    title Grand Palace - Контактна інформація, початок зручності
+    meta(name="keywords" content="центр, grand, palace, здоров'я, будівництво, нерухомість, ТРЦ, гранд, палас")
+    meta(name="description" content="Контактні данні компанії Grand Palace: Потрібне приміщення під комерційний бізнес? Звертайтесь до Grand Palace і не пошкодуєте!")
+    meta(property="og:description" content="Шукаєте приміщення під комерційний бізнес? Звертайтесь до Grand Palace!")
+    meta(property="og:title" content="Grand Palace -  Контактна інформація, початок зручності")
+    meta(property="og:image" content="img/logo.jpg")
+    meta(property="og:type" content="website")
+   
+
+
 
   body(tabindex="0")
     .body-wrapper
