--- a/src/pug/ru/components/contact-section.pug
+++ b/src/pug/ru/components/contact-section.pug
@@ -1,43 +1,44 @@
 section.contacts
   .container
     .contacts-wrapper
-      h2.contacts__title.title
+      h1.contacts__title.title(itemscope, itemtype='https://schema.org/Organization')
         span.head-line Наши
         |  контакты
       .contacts__items
         .contacts-info__items.contacts__item
-          .contacts-info__item
-            h4 Телефоны
+          .contacts-info__item(itemscope, itemtype='https://schema.org/ContactPoint')
+            h2 Телефоны
             .phone-list.contacts-info__phones
-              a.phone-link(href='tel:+380671321563')
+              a.phone-link(href='tel:+380671321563', itemprop='telephone')
                 +svg('phone')
                 |(067)&nbsp;132-15-63
-              a.phone-link(href='tel:+380671321563')
+              a.phone-link(href='tel:+380671321563', itemprop='telephone')
                 |(067)&nbsp;132-15-63
-          .contacts-info__item
-            h4 Почта
+          .contacts-info__item(itemscope, itemtype='https://schema.org/ContactPoint')
+            h2 Почта
             .contacts-info__email
-              a.email-link(href='mailto:office@grandpalace.km.ua')
+              a.email-link(href='mailto:office@grandpalace.km.ua', itemprop='email')
                 +svg('email')
                 |office@grandpalace.km.ua
-          .contacts-info__item
-            h4 Отделение продаж
-            .contacts-info__address
+          .contacts-info__item(itemscope, itemtype='https://schema.org/PostalAddress')
+            h2 Отдел продаж
+            .contacts-info__address( itemscope, itemtype='https://schema.org/PostalAddress')
               .address-text
                 .text-wrap
-                  span м.&nbsp;Хмельницкий,&nbsp;
-                  span ул.&nbsp;Подольская,&nbsp;115
+                  span(itemscope, itemtype='https://schema.org/Address')
+                    span г.&nbsp;Хмельницкий,&nbsp;
+                    span ул.&nbsp;Подольская,&nbsp;115
                 +svg('pin-footer')
-          .contacts-info__item
-            h4 Режим работы
+          .contacts-info__item(itemscope, itemtype='https://schema.org/ContactPoint')
+            h3 Режим работы
             .contacts-info__working-hours
               .working-hours-wrap
-                p Пн-пт 10:00 – 19:00
+                p(itemprop='description') Пн-пт 10:00 – 19:00
                   +svg('clock')
-                p Сб 11:00 – 17:00, Нд&nbsp;выходной
+                p(itemprop='description') Сб 11:00 – 17:00, Вс&nbsp;выходной
 
         .contacts-map.contacts__item
           .contacts-map__title
             h4 Мы на карте
           .contacts-map__img
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1543.0373354892847!2d26.98873072437564!3d49.42650709265669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473207e3c34fdb9b%3A0x90f6c3647d70162d!2zR1JBTkQgUEFMQUNFLCDQltCY0KLQm9Ce0JLQmNCZINCa0J7QnNCf0JvQldCa0KE!5e0!3m2!1sru!2sua!4v1629452712900!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1543.0373354892847!2d26.98873072437564!3d49.42650709265669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473207e3c34fdb9b%3A0x90f6c3647d70162d!2zR1JBTkQgUEFMQUNFLCDQltCY0KLQm9Ce0JLQmNCZINCa0J7QnNCf0JvQldCa0KE!5e0!3m2!1sru!2sua!4v1629452712900!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy")
