--- a/src/pug/ru/contacts.pug
+++ b/src/pug/ru/contacts.pug
@@ -1,14 +1,32 @@
 doctype html
 html(lang="uk")
   head
+    //- Мета-конфігурації
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    title Grand Palace - контакти
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    link(rel="stylesheet" href="/css/styles.css")
+    link(rel="stylesheet" href="../css/styles.css")
+    meta(property="og:url" content="#")
+    link(rel='canonical' href='#') 
+  
+    //- 
+    meta(name="author" content="Grand Palace")
+    meta(name="publisher" content="Grand Palace")  
+    //- Шрифти
+    link(rel='preconnect' href='https://fonts.googleapis.com')
+    link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
+    link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
+    //- Favicon
+    link(rel='icon' href='../img/favicon.ico')
+    //- Мета опис
+    title Grand Palace - Контактная информация, начало удобства
+    meta(name="keywords" content="центр, grand, palace, здоровье, строительство, недвижимость, ТРЦ, гранд, палас")
+    meta(name="description" content="Контактные данные компании Grand Palace: Нужно ли помещение под коммерческий бизнес? Обращайтесь в Grand Palace и не пожалеете!")
+    meta(property="og:description" content="Ищете помещение под коммерческий бизнес? Обращайтесь в Grand Palace!")
+    meta(property="og:title" content="Grand Palace - Контактная информация, начало удобства")
+    meta(property="og:image" content="./img/logo.jpg")
+    meta(property="og:type" content="website")
+   
 
   body(tabindex="0")
     .body-wrapper
